[project]
name = "home-assistant-sdk"
version = "0.1.0"
description = "Home Assistant SDK"
readme = "README.md"
authors = [
    { name = "ailearncoder", email = "ailearncoder8@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.5",
    "websockets>=15.0.1",
    "pyjwt>=2.8.0",
]

[project.scripts]
home-assistant-sdk = "home_assistant_sdk:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
